--- a/tests/quality_check_bronze.dbquery.ipynb
+++ b/tests/quality_check_bronze.dbquery.ipynb
@@ -10,9 +10,16 @@
       "rowLimit": 1000
      },
      "inputWidgets": {},
-     "nuid": "445b2093-bf85-4df8-9c1f-566e418dc667",
+     "nuid": "a323c8dc-f141-4031-af44-93454990bf19",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1764417490216}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
@@ -22,28 +29,26 @@
     "-- This script used for data quality step and Transform the data to be more suitable.\n",
     "-- =========================================================\n",
     "\n",
-    "-- ====================\n",
+    "-- =========================================\n",
     "-- crm_cust_info Table\n",
-    "-- ====================\n",
+    "-- =========================================\n",
     "-- Detect the Duplicates and Nulls from Primary_key (cust_id)\n",
     "SELECT cst_id, count(1) as cnt\n",
-    "FROM datawarehouse.silver.crm_cust_info\n",
+    "FROM datawarehouse.bronze.crm_cust_info\n",
     "GROUP by cst_id\n",
     "having cnt > 1;\n",
     "\n",
     "\n",
     "-- Check the Sapces (Unwanted)\n",
-    "select cst_firstname, cst_lastname from datawarehouse.silver.crm_cust_info \n",
+    "select cst_firstname, cst_lastname from datawarehouse.bronze.crm_cust_info \n",
     "where trim(cst_firstname) != cst_firstname or trim(cst_lastname) != cst_lastname;\n",
     "\n",
     "\n",
     "-- Cehck distinct values in gender\n",
-    "select distinct cst_gndr from datawarehouse.silver.crm_cust_info;\n",
+    "select distinct cst_gndr from datawarehouse.bronze.crm_cust_info;\n",
     "\n",
     "-- Check distinct values in the marital status\n",
-    "select distinct cst_marital_status from datawarehouse.silver.crm_cust_info;\n",
-    "\n",
-    "\n",
+    "select distinct cst_marital_status from datawarehouse.bronze.crm_cust_info;\n",
     "\n",
     "\n",
     "-- =========================================\n",
@@ -52,7 +57,7 @@
     "-- Check the Duplicates and Nulls from Primary_key (prd_id)\n",
     "-- Expectation: No Result\n",
     "select prd_id, count(1)\n",
-    "from datawarehouse.silver.crm_prd_info\n",
+    "from datawarehouse.bronze.crm_prd_info\n",
     "group by prd_id\n",
     "having count(1) > 1 or prd_id is null;\n",
     "\n",
@@ -60,26 +65,20 @@
     "-- Check for unwanted spaces\n",
     "select \n",
     "prd_nm\n",
-    "from datawarehouse.silver.crm_prd_info\n",
+    "from datawarehouse.bronze.crm_prd_info\n",
     "where trim(prd_nm) != prd_nm;\n",
     "\n",
     "\n",
     "-- check nulls or negative numbers\n",
     "select \n",
     "prd_cost\n",
-    "from datawarehouse.silver.crm_prd_info\n",
+    "from datawarehouse.bronze.crm_prd_info\n",
     "where prd_cost is null or prd_cost < 0;\n",
     "\n",
     "\n",
     "-- Data Standarizatoin and Consistency\n",
     "select distinct prd_line \n",
-    "from datawarehouse.silver.crm_prd_info;\n",
-    "\n",
-    "-- check if end_dt < start_dt\n",
-    "select prd_end_dt, prd_start_dt from datawarehouse.silver.crm_prd_info\n",
-    "where prd_end_dt < prd_start_dt;\n",
-    "\n",
-    "\n",
+    "from datawarehouse.bronze.crm_prd_info;\n",
     "\n",
     "\n",
     "-- =========================================\n",
@@ -88,27 +87,28 @@
     "-- check the sls_ord_num if it has nulls and unwanted spaces\n",
     "select \n",
     "sls_ord_num\n",
-    "from datawarehouse.silver.crm_sales_details\n",
+    "from datawarehouse.bronze.crm_sales_details\n",
     "where sls_ord_num is null or sls_ord_num != trim(sls_ord_num);\n",
     "\n",
     "-- check if sls_cust_id has null values\n",
     "select \n",
     "sls_cust_id\n",
-    "from datawarehouse.silver.crm_sales_details\n",
+    "from datawarehouse.bronze.crm_sales_details\n",
     "where sls_cust_id is null or sls_cust_id != trim(sls_cust_id);\n",
     "\n",
     "-- check the sls_order_dt if it has nulls or zero dates\n",
     "select \n",
     "sls_order_dt\n",
     "-- try_to_date(sls_order_dt, 'yyyyMMdd') as sls_order_dt\n",
-    "from datawarehouse.silver.crm_sales_details where\n",
+    "from datawarehouse.bronze.crm_sales_details where\n",
     "where sls_order_dt is null \n",
-    "or len(sls_order_dt) != 10 ;\n",
+    "or sls_order_dt = 0\n",
+    "or len(sls_order_dt) != 8 ;\n",
     "\n",
     "-- Check if order_dt higer than ship date\n",
     "select \n",
     "  sls_order_dt, sls_ship_dt\n",
-    "from datawarehouse.silver.crm_sales_details\n",
+    "from datawarehouse.bronze.crm_sales_details\n",
     "where try_to_date(sls_order_dt, 'yyyyMMdd') > try_to_date(sls_ship_dt, 'yyyyMMdd') \n",
     "  or try_to_date(sls_order_dt, 'yyyyMMdd') > try_to_date(sls_due_dt, 'yyyyMMdd')\n",
     "  or try_to_date(sls_ship_dt, 'yyyyMMdd') > try_to_date(sls_due_dt, 'yyyyMMdd');\n",
@@ -117,11 +117,12 @@
     "-- check sls_sales, sls_quantity, sls_price is not null or zero or negative\n",
     "select \n",
     "sls_sales, sls_quantity, sls_price\n",
-    "from datawarehouse.silver.crm_sales_details\n",
+    "from datawarehouse.bronze.crm_sales_details\n",
     "where sls_sales is null or sls_sales <= 0 \n",
     "  or sls_quantity is null or sls_quantity <= 0 \n",
     "  or sls_price is null or sls_price <= 0\n",
     "order by sls_sales, sls_quantity, sls_price;\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -131,13 +132,13 @@
     "-- =========================================\n",
     "-- Check the cid column, remove NAS from begining of it\n",
     "select distinct * \n",
-    "from datawarehouse.silver.erp_cust_az12\n",
-    "where cid not in (select cst_key from datawarehouse.silver.crm_cust_info);\n",
+    "from datawarehouse.bronze.erp_cust_az12\n",
+    "where cid not in (select cst_key from crm_cust_info);\n",
     "\n",
     "\n",
     "-- Check the bdate column if has nulls for invalid dates\n",
     "select distinct bdate\n",
-    "from datawarehouse.silver.erp_cust_az12\n",
+    "from datawarehouse.bronze.erp_cust_az12\n",
     "where bdate is null or bdate != trim(bdate) or len(bdate) != 10 or bdate > current_date();\n",
     "\n",
     "-- Check the gen column if has misleading values\n",
@@ -147,7 +148,7 @@
     "    WHEN upper(trim(gen)) IN ('M', 'MALE') THEN 'Male'\n",
     "    ELSE 'n/a'\n",
     "  END AS gen\n",
-    "from datawarehouse.silver.erp_cust_az12;\n",
+    "from datawarehouse.bronze.erp_cust_az12;\n",
     "\n",
     "\n",
     "\n",
@@ -159,8 +160,8 @@
     "select distinct\n",
     "CID as cid_old,\n",
     "replace(cid, '-', '') as cid\n",
-    "from datawarehouse.silver.erp_loc_a101\n",
-    "where replace(cid, '-', '') not in (select cst_key from datawarehouse.silver.crm_cust_info);\n",
+    "from datawarehouse.bronze.erp_loc_a101\n",
+    "where replace(cid, '-', '') not in (select cst_key from datawarehouse.bronze.crm_cust_info);\n",
     "\n",
     "\n",
     "\n",
@@ -168,7 +169,7 @@
     "select \n",
     "distinct CNTRY as cntry_old,\n",
     "case \n",
-    "  when upper(trim(cntry)) in ('US', 'USA', 'UNITED STATES') then 'USA'\n",
+    "  when upper(trim(cntry)) in ('US', 'USA', 'UNITED STATES') then 'United States'\n",
     "  when upper(trim(cntry)) in ('CA', 'CANADA') then 'Canada'\n",
     "  when upper(trim(cntry)) in ('DE', 'GERMANY') then 'Germany'\n",
     "  when upper(trim(cntry)) in ('AU', 'AUSTRALIA') then 'Australia'\n",
@@ -176,7 +177,38 @@
     "  when upper(trim(cntry)) in ('UK', 'UNITED KINGDOM') then 'United Kingdom'\n",
     "  else 'n/a'\n",
     "end as cntry\n",
-    "from datawarehouse.silver.erp_loc_a101;\n"
+    "from datawarehouse.bronze.erp_loc_a101;\n",
+    "\n",
+    "\n",
+    "\n",
+    "-- =========================================\n",
+    "-- erp_cust_az12 Table\n",
+    "-- =========================================\n",
+    "-- checkt the id column matches with id in prd_info table\n",
+    "select\n",
+    "id\n",
+    "from datawarehouse.bronze.erp_px_cat_g1v2\n",
+    "where id not in (select distinct cat_id from datawarehouse.silver.crm_prd_info)\n",
+    "order by id;\n",
+    "\n",
+    "-- Check unwanted space\n",
+    "select * \n",
+    "from datawarehouse.bronze.erp_px_cat_g1v2\n",
+    "where cat != trim(cat) or subcat != trim(subcat) or MAINTENANCE != trim(MAINTENANCE);\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -191,11 +223,11 @@
     "pythonIndentUnit": 4,
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "dev_databricks_wks",
-     "schema": "default"
+     "catalog": "datawarehouse",
+     "schema": "bronze"
     }
    },
-   "notebookName": "check_data_qulality_silver.dbquery.ipynb",
+   "notebookName": "quality_check_bronze.dbquery.ipynb",
    "widgets": {}
   },
   "language_info": {
