build gold layer checks and import draw.io files.

--- a/scripts/silver/ddl_silver.dbquery.ipynb
+++ b/scripts/silver/ddl_silver.dbquery.ipynb
@@ -80,9 +80,9 @@
     "-- CUST_AZ12.csv\n",
     "ALTER TABLE datawarehouse.silver.erp_cust_az12 SET TBLPROPERTIES('delta.feature.allowColumnDefaults' = 'supported');\n",
     "CREATE OR REPLACE TABLE datawarehouse.silver.erp_cust_az12 (\n",
-    "  CID string,\n",
-    "  BDATE date,\n",
-    "  GEN string,\n",
+    "  cid string,\n",
+    "  bdate date,\n",
+    "  gen string,\n",
     "  dwh_create_date TIMESTAMP DEFAULT current_timestamp()\n",
     ");\n",
     "\n",
@@ -90,18 +90,18 @@
     "-- LOC_a101.csv\n",
     "ALTER TABLE datawarehouse.silver.erp_loc_a101 SET TBLPROPERTIES('delta.feature.allowColumnDefaults' = 'supported');\n",
     "CREATE OR REPLACE TABLE datawarehouse.silver.erp_loc_a101 (\n",
-    "  CID string,\n",
-    "  CNTRY string,\n",
+    "  cid string,\n",
+    "  cntry string,\n",
     "  dwh_create_date TIMESTAMP DEFAULT current_timestamp()\n",
     ");\n",
     "\n",
     "-- PX_CAT_G1V2.csv\n",
     "ALTER TABLE datawarehouse.silver.erp_px_cat_g1v2 SET TBLPROPERTIES('delta.feature.allowColumnDefaults' = 'supported');\n",
     "CREATE OR REPLACE TABLE datawarehouse.silver.erp_px_cat_g1v2 (\n",
-    "  ID string,\n",
-    "  CAT string,\n",
-    "  SUBCAT string,\n",
-    "  MAINTENANCE string,\n",
+    "  id string,\n",
+    "  cat string,\n",
+    "  subcat string,\n",
+    "  maintenance string,\n",
     "  dwh_create_date TIMESTAMP DEFAULT current_timestamp()\n",
     ");\n",
     "\n",
