--- a/scripts/silver/proc_load_silver.dbquery.ipynb
+++ b/scripts/silver/proc_load_silver.dbquery.ipynb
@@ -69,13 +69,13 @@
     "  CASE \n",
     "    WHEN upper(trim(cst_marital_status)) = 'S' then 'Single'\n",
     "    WHEN UPPER(trim(cst_marital_status)) = 'M' then 'Married'\n",
-    "    ELSE 'N/A'\n",
+    "    ELSE 'n/a'\n",
     "  END AS cst_marital_status,\n",
     "\n",
     "  CASE\n",
     "    WHEN cst_gndr = 'F' THEN 'Female'\n",
     "    WHEN cst_gndr = 'M' THEN 'Male'\n",
-    "    ELSE 'N/A'\n",
+    "    ELSE 'n/a'\n",
     "  END AS cst_gndr,\n",
     "  cst_create_date\n",
     "  from (\n",
@@ -83,7 +83,7 @@
     "      *, \n",
     "      row_number() over (partition by cst_id order by cst_create_date desc) flag_last\n",
     "    from datawarehouse.bronze.crm_cust_info\n",
-    "  ) where flag_last = 1;\n",
+    "  ) where flag_last = 1 and cst_id is not null;\n",
     "\n",
     "\n",
     "\n",
@@ -181,9 +181,9 @@
     "  -- Transforming the crm_prd_info table for bronze to silver\n",
     "  TRUNCATE TABLE datawarehouse.silver.erp_cust_az12;\n",
     "  INSERT INTO datawarehouse.silver.erp_cust_az12 (\n",
-    "    CID,\n",
-    "    BDATE,\n",
-    "    GEN\n",
+    "    cid,\n",
+    "    bdate,\n",
+    "    gen\n",
     "  )\n",
     "  select \n",
     "  CASE \n",
@@ -238,10 +238,10 @@
     "  truncate table datawarehouse.silver.erp_px_cat_g1v2;\n",
     "  insert into datawarehouse.silver.erp_px_cat_g1v2\n",
     "  (\n",
-    "    id, cat, SUBCAT, MAINTENANCE\n",
+    "    id, cat, subcat, maintenance\n",
     "  )\n",
     "  select \n",
-    "  id, cat, SUBCAT, MAINTENANCE\n",
+    "  id, cat, subcat, maintenance\n",
     "  from datawarehouse.bronze.erp_px_cat_g1v2;\n",
     "\n",
     "  -- select * from datawarehouse.silver.erp_px_cat_g1v2;\n",
