--- a/tests/quality_check_silver.dbquery.ipynb
+++ b/tests/quality_check_silver.dbquery.ipynb
@@ -29,7 +29,7 @@
     "SELECT cst_id, count(1) as cnt\n",
     "FROM datawarehouse.silver.crm_cust_info\n",
     "GROUP by cst_id\n",
-    "having cnt > 1;\n",
+    "having cnt > 1 or cst_id is null;\n",
     "\n",
     "\n",
     "-- Check the Sapces (Unwanted)\n",
